objects/IPCA_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Addendum__c</fullName>
        <label>IP Config Addendum</label>
        <referenceTo>IP_Config__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ancillary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeliveredTime__c</fullName>
        <label>DeliveredTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <label>IPCA Delivery</label>
    <nameField>
        <label>IPCA Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>